--- a/proyectos.html
+++ b/proyectos.html
@@ -21,9 +21,9 @@
         <p>Una pequeña lista de mis proyectos</p>
 
         <ul>
-            <li>La música</li>
-            <li>El cine</li>
-            <li>La lectura</li>
+            <li>Reproductor de música</li>
+            <li>Juego de la serpiente</li>
+            <li>Chat Bot</li>
         </ul>
     </main>
 
