--- a/proyectos.html
+++ b/proyectos.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="plantilla.css" />
+    <link rel="stylesheet" type="text/css" href="estilos/plantilla.css" />
     <title>Mis proyectos</title>
 </head>
 <body>
