--- a/sobremi.html
+++ b/sobremi.html
@@ -3,12 +3,12 @@
     <meta charset="UTF-8" />
     <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="estilos/plantilla.css" />
-    <title>Mis aficiones</title>
+    <title>Sobre mí</title>
 </head>
 <body>
     <header>
         <h1>Mi página</h1>
-        
+
         <nav>
             <a href="index.html">Inicio</a>
             <a href="sobremi.html">Sobre mí</a>
@@ -18,14 +18,18 @@
     </header>
 
     <main>
-        <h2>Mis aficiones</h2>
-        <p>Una pequeña lista de mis aficiones</p>
-
-        <ul>
-            <li>La música</li>
-            <li>El cine</li>
-            <li>La lectura</li>
-        </ul>
+        <h2>Sobre mí</h2>
+        <section>
+            <h3>Nombre y apellidos</h3>
+            <p>Pablo Valdés Fernández</p>
+            <h3>Correo electrónico</h3>
+            <p>UO282655</p>
+            <h3>Quién soy</h3>
+            <p>Soy un alumno de la Universidad de Oviedo</p>
+            <h3>Foto</h3>
+            <p>Una foto mía</p>
+            <img src="foto.png" alt="Una foto mía" />
+        </section>
     </main>
 
     <footer>Universidad de Oviedo</footer>
