--- a/index.html
+++ b/index.html
@@ -10,25 +10,15 @@
         <h1>Mi página</h1>
 
         <nav>
-            <a href="index.html">Sobre mí</a>
+            <a href="index.html">Inicio</a>
+            <a href="sobremi.html">Sobre mí</a>
             <a href="aficiones.html">Mis aficiones</a>
             <a href="proyectos.html">Mis proyectos</a>
         </nav>
     </header>
 
     <main>
-        <h2>Sobre mí</h2>
-        <section>
-            <h3>Nombre y apellidos</h3>
-            <p>Pablo Valdés Fernández</p>
-            <h3>Correo electrónico</h3>
-            <p>UO282655</p>
-            <h3>Quién soy</h3>
-            <p>Soy un alumno de la Universidad de Oviedo</p>
-            <h3>Foto</h3>
-            <p>Una foto mía</p>
-            <img src="foto.png" alt="Una foto mía" />
-        </section>
+        <h2>Bienvenido a mi página</h2>
     </main>
 
     <footer>Universidad de Oviedo</footer>
