--- a/proyectos.html
+++ b/proyectos.html
@@ -10,7 +10,8 @@
         <h1>Mi página</h1>
         
         <nav>
-            <a href="index.html">Sobre mí</a>
+            <a href="index.html">Inicio</a>
+            <a href="sobremi">Sobre mí</a>
             <a href="aficiones.html">Mis aficiones</a>
             <a href="proyectos.html">Mis proyectos</a>
         </nav>
