--- a/proyectos.html
+++ b/proyectos.html
@@ -12,7 +12,7 @@
             
             <nav>
                 <a href="index.html">Inicio</a>
-                <a href="sobremi">Sobre mí</a>
+                <a href="sobremi.html">Sobre mí</a>
                 <a href="aficiones.html">Mis aficiones</a>
                 <a href="proyectos.html">Mis proyectos</a>
             </nav>
