--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
         <meta charset="UTF-8" />
         <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" type="text/css" href="estilos/plantilla.css" />
-        <title>Sobre mí</title>
+        <title>Mi página</title>
     </head>
     <body>
         <header>
-            <h1>Mi página</h1>
+            <h1><a href="index.html">Mi página</a></h1>
     
             <nav>
-                <a href="index.html">Inicio</a>
                 <a href="sobremi.html">Sobre mí</a>
                 <a href="aficiones.html">Mis aficiones</a>
                 <a href="proyectos.html">Mis proyectos</a>
