--- a/sobremi.html
+++ b/sobremi.html
@@ -8,10 +8,9 @@
     </head>
     <body>
         <header>
-            <h1>Mi página</h1>
+            <h1><a href="index.html">Mi página</a></h1>
     
             <nav>
-                <a href="index.html">Inicio</a>
                 <a href="sobremi.html">Sobre mí</a>
                 <a href="aficiones.html">Mis aficiones</a>
                 <a href="proyectos.html">Mis proyectos</a>
