--- a/sobremi.html
+++ b/sobremi.html
@@ -5,6 +5,7 @@
         <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" type="text/css" href="estilos/plantilla.css" />
         <title>Sobre mí</title>
+        <script src="scripts/script.js"></script>
     </head>
     <body>
         <header>
@@ -14,11 +15,13 @@
                 <a href="sobremi.html">Sobre mí</a>
                 <a href="aficiones.html">Mis aficiones</a>
                 <a href="proyectos.html">Mis proyectos</a>
+                <a href="buscar.html">Buscar</a>
             </nav>
         </header>
     
         <main>
             <h2>Sobre mí</h2>
+            
             <section>
                 <h3>Nombre y apellidos</h3>
                 <p>Pablo Valdés Fernández</p>
