--- a/aficiones.html
+++ b/aficiones.html
@@ -5,6 +5,7 @@
         <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" type="text/css" href="estilos/plantilla.css" />
         <title>Mis aficiones</title>
+        <script src="scripts/script.js"></script>
     </head>
     <body>
         <header>
