--- a/proyectos.html
+++ b/proyectos.html
@@ -5,6 +5,7 @@
         <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" type="text/css" href="estilos/plantilla.css" />
         <title>Mis proyectos</title>
+        <script src="scripts/script.js"></script>
     </head>
     <body>
         <header>
@@ -14,6 +15,7 @@
                 <a href="sobremi.html">Sobre mí</a>
                 <a href="aficiones.html">Mis aficiones</a>
                 <a href="proyectos.html">Mis proyectos</a>
+                <a href="buscar.html">Buscar</a>
             </nav>
         </header>
     
