--- a/aficiones.html
+++ b/aficiones.html
@@ -21,11 +21,26 @@
         <main>
             <h2>Mis aficiones</h2>
             <p>Una pequeña lista de mis aficiones</p>
-    
+
+            <h3>La música</h3>
             <ul>
-                <li>La música</li>
-                <li>El cine</li>
-                <li>La lectura</li>
+                <li>The Smiths</li>
+                <li>Metallica</li>
+                <li>Michael Jackson</li>
+            </ul>
+
+            <h3>El cine</h3>
+            <ul>
+                <li>Suspiria</li>
+                <li>Amanece que no es poco</li>
+                <li>La sustancia</li>
+            </ul>
+
+            <h3>La literatura</h3>
+            <ul>
+                <li>Dune</li>
+                <li>Cien años de soledad</li>
+                <li>A sangre fría</li>
             </ul>
         </main>
     
