--- a/aficiones.html
+++ b/aficiones.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" type="text/css" href="estilos/plantilla.css" />
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
         <title>Mis aficiones</title>
         <script src="scripts/script.js"></script>
     </head>
@@ -12,6 +13,7 @@
             <h1><a href="index.html">Mi página</a></h1>
     
             <nav>
+                <a href="index.html">Inicio</a>
                 <a href="sobremi.html">Sobre mí</a>
                 <a href="aficiones.html">Mis aficiones</a>
                 <a href="proyectos.html">Mis proyectos</a>
