--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
         <main>
             <h2>Bienvenido a mi página</h2>
 
-            <article>
-                <input type="text" placeholder="Buscar" onkeyup="buscarTexto()" />
-            </article>
+            <label for="buscar">Buscar:</label>
+            <input type="text" placeholder="Buscar" name="buscar" onkeyup="buscarTexto()" />
             <section></section>
         </main>
     
