--- a/sobremi.html
+++ b/sobremi.html
@@ -10,13 +10,13 @@
     </head>
     <body>
         <header>
-            <h1><a href="index.html">Mi página</a></h1>
+            <h1><a href="index.html" accesskey="M">Mi página</a></h1>
     
             <nav>
-                <a href="index.html">Inicio</a>
-                <a href="sobremi.html">Sobre mí</a>
-                <a href="aficiones.html">Mis aficiones</a>
-                <a href="proyectos.html">Mis proyectos</a>
+                <a href="index.html" accesskey="I">Inicio</a>
+                <a href="sobremi.html" accesskey="S">Sobre mí</a>
+                <a href="aficiones.html" accesskey="A">Mis aficiones</a>
+                <a href="proyectos.html" accesskey="P">Mis proyectos</a>
             </nav>
         </header>
     
