--- a/proyectos.html
+++ b/proyectos.html
@@ -4,18 +4,19 @@
         <meta charset="UTF-8" />
         <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" type="text/css" href="estilos/plantilla.css" />
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
         <title>Mis proyectos</title>
         <script src="scripts/script.js"></script>
     </head>
     <body>
         <header>
-            <h1><a href="index.html">Mi página</a></h1>
+            <h1><a href="index.html" accesskey="M">Mi página</a></h1>
     
             <nav>
-                <a href="sobremi.html">Sobre mí</a>
-                <a href="aficiones.html">Mis aficiones</a>
-                <a href="proyectos.html">Mis proyectos</a>
-                <a href="buscar.html">Buscar</a>
+                <a href="index.html" accesskey="I">Inicio</a>
+                <a href="sobremi.html" accesskey="S">Sobre mí</a>
+                <a href="aficiones.html" accesskey="A">Mis aficiones</a>
+                <a href="proyectos.html" accesskey="P">Mis proyectos</a>
             </nav>
         </header>
     
