--- a/sobremi.html
+++ b/sobremi.html
@@ -10,12 +10,12 @@
     </head>
     <body> 
         <header>
-            <h1><a href="index.html" accesskey="M">Mi página</a></h1>
+            <h1><a href="index.html" accesskey="M" tabindex="1">Mi página</a></h1>
     
             <nav>
-                <a href="sobremi.html" accesskey="S">Sobre mí</a>
-                <a href="aficiones.html" accesskey="A">Mis aficiones</a>
-                <a href="proyectos.html" accesskey="P">Mis proyectos</a>
+                <a href="sobremi.html" accesskey="S" tabindex="2">Sobre mí</a>
+                <a href="aficiones.html" accesskey="A" tabindex="3">Mis aficiones</a>
+                <a href="proyectos.html" accesskey="P" tabindex="4">Mis proyectos</a>
             </nav>
         </header>
            
