--- a/sobremi.html
+++ b/sobremi.html
@@ -26,7 +26,7 @@
                 <h3>Nombre y apellidos</h3>
                 <p>Pablo Valdés Fernández</p>
                 <h3>Correo electrónico</h3>
-                <p>UO282655</p>
+                <p>UO282655@uniovi.es</p>
                 <h3>Quién soy</h3>
                 <p>Soy un alumno de la Universidad de Oviedo</p>
                 <h3>Foto</h3>
