--- a/aficiones.html
+++ b/aficiones.html
@@ -11,6 +11,7 @@
             <h1><a href="index.html">Mi página</a></h1>
     
             <nav>
+                <a href="index.html" accesskey="I">Inicio</a>
                 <a href="sobremi.html">Sobre mí</a>
                 <a href="aficiones.html">Mis aficiones</a>
                 <a href="proyectos.html">Mis proyectos</a>
