--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h2>Bienvenido a mi página</h2>
 
             <label for="buscar">Buscar:</label>
-            <input accesskey="B" type="text" placeholder="Buscar" id="buscar" onkeyup="buscarTexto()" />
+            <input accesskey="B" tabindex="5" type="text" placeholder="Buscar" id="buscar" onkeyup="buscarTexto()" />
             <section></section>
         </main>
     
